fixed nav display on mobile

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -372,9 +372,9 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
         margin-right: 0;
         padding-left: 4vw;
     }
-    .site-nav-right {
+    /*.site-nav-right {
         display: none;
-    }
+    }*/
 }
 
 
